--- a/maths/Makefile
+++ b/maths/Makefile
@@ -3,9 +3,16 @@ QUESTIONS := $(wildcard math-*)
 # 'subdirs' is the default target. And we want 
 # each of its prerequisites - also phony targets - to execute
 .PHONY : subdirs $(QUESTIONS)
-subdirs : $(QUESTIONS) 
-	@echo "[subdirs] = $(QUESTIONS)"
+
+# Public targets : Only these should be called from the command line
+.PHONY : plot prepare dvi ps clean
+
+# NOTE : If 'make ps clean' is specified at this level, then 
+# given the way TARGET is defined, only 'make ps' will be 
+# called recursively and 'make clean' would in fact be ignored 
+TARGET := $(word 1,$(strip $(MAKECMDGOALS))) 
+
+subdirs clean plot prepare dvi ps : $(QUESTIONS) ; 
 
 $(QUESTIONS) :
-	$(MAKE) -C $@
-
+	$(MAKE) $(TARGET) -C $@
