--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
 
-# The next 3 directives will ignore all generated .tex, .dvi, .ps, .pdf etc.
-# They work because we name generated files in a specific way in the Makefiles
-math-*
-physics-*
-chemistry-*
+# Ignore everything, everywhere EXCEPT files written by the user, namely: 
+#	1. question.tex 
+#	2. Any .gnuplot files ( but not generated .table files )
+#	3. Makefiles ( obviously )
 
-# These other exclusions might overlap with those above. But they 
-# represent extensions that are rather commonly used by users when 
-# doing stuff on the command line
-
-*.log 
+*.dvi
+*.ps
+*.pdf
 *.aux
-*.out
-
-# There is no need to track .table files generated from .gnuplot
+*.log
 *.table
+*.out
+*.tex
+! question.tex
