Create a separate folder witin $VTA_ROOT for housing 'shared' Makefiles..
Modified existing Makefiles to reflect this change. Files like Variables.mk
and Atomic.mk are (rather, shall be) required in many places throughout the
directory structure. Hence, it makes sense to have such files in a central place

--- a/maths/math-02/Makefile
+++ b/maths/math-02/Makefile
@@ -1,3 +1,3 @@
-include $(VTA_ROOT)/Variables.mk
-include $(QBANK_MATHS)/Atomic.mk 
+include $(VTA_ROOT)/Makefiles/Variables.mk
+include $(VTA_ROOT)/Makefiles/Atomic.mk 
 
