Added tests and fixtures for quizzes and questions

--- a/webapp/test/fixtures/questions.yml
+++ b/webapp/test/fixtures/questions.yml
@@ -8,11 +8,10 @@
 #  updated_at :datetime
 #
 
-require 'test_helper'
+# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-class QuestionTest < ActiveSupport::TestCase
-  # Replace this with your real tests.
-  test "the truth" do
-    assert true
-  end
-end
+one:
+  folder: MyString
+
+two:
+  folder: MyString
