--- a/webapp/test/fixtures/quizzes.yml
+++ b/webapp/test/fixtures/quizzes.yml
@@ -8,11 +8,10 @@
 #  updated_at :datetime
 #
 
-require 'test_helper'
+# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-class QuizTest < ActiveSupport::TestCase
-  # Replace this with your real tests.
-  test "the truth" do
-    assert true
-  end
-end
+one:
+  teacher_id: 1
+
+two:
+  teacher_id: 1
