Defined obvious associations between various models..
Changed 'Teacher' DB-table to include school_id

--- a/webapp/test/fixtures/teachers.yml
+++ b/webapp/test/fixtures/teachers.yml
@@ -8,6 +8,7 @@
 #  email      :string(255)
 #  created_at :datetime
 #  updated_at :datetime
+#  school_id  :integer
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
