--- a/webapp/test/fixtures/db_questions.yml
+++ b/webapp/test/fixtures/db_questions.yml
@@ -2,12 +2,13 @@
 #
 # Table name: db_questions
 #
-#  id         :integer         not null, primary key
-#  path       :string(255)
-#  attempts   :integer         default(0)
-#  flags      :integer         default(0)
-#  created_at :datetime
-#  updated_at :datetime
+#  id          :integer         not null, primary key
+#  path        :string(255)
+#  attempts    :integer         default(0)
+#  flags       :integer         default(0)
+#  created_at  :datetime
+#  updated_at  :datetime
+#  examiner_id :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
