--- a/webapp/test/fixtures/questions.yml
+++ b/webapp/test/fixtures/questions.yml
@@ -9,6 +9,7 @@
 #  db_question_id :integer
 #  teacher_id     :integer
 #  times_used     :integer         default(0)
+#  quiz_id        :integer
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
