--- a/webapp/test/fixtures/db_questions.yml
+++ b/webapp/test/fixtures/db_questions.yml
@@ -9,6 +9,7 @@
 #  created_at  :datetime
 #  updated_at  :datetime
 #  examiner_id :integer
+#  topic_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
