A Teacher now :has_many :db_questions..
These are questions the teacher recommended for addition to the database
and to which she would like quick access in the future. Hence, the
new association

--- a/webapp/test/fixtures/db_questions.yml
+++ b/webapp/test/fixtures/db_questions.yml
@@ -10,6 +10,7 @@
 #  updated_at  :datetime
 #  examiner_id :integer
 #  topic_id    :integer
+#  teacher_id  :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
