DbQuestion is the new Question...
The old 'Question' model introduced an unnecessary fatty layer in the
DB-schema. Hence, dropped it and renamed 'DbQuestion' as 'Question'.

If there is any need to capture teacher specific information for a
question, then I suppose the best way would be to create a new joint table.

--- a/webapp/test/fixtures/questions.yml
+++ b/webapp/test/fixtures/questions.yml
@@ -1,21 +1,26 @@
 # == Schema Information
 #
-# Table name: questions
+# Table name: db_questions
 #
-#  id             :integer         not null, primary key
-#  created_at     :datetime
-#  updated_at     :datetime
-#  favourite      :boolean         default(FALSE)
-#  db_question_id :integer
-#  teacher_id     :integer
-#  times_used     :integer         default(0)
-#  quiz_id        :integer
+#  id          :integer         not null, primary key
+#  path        :string(255)
+#  attempts    :integer         default(0)
+#  flags       :integer         default(0)
+#  created_at  :datetime
+#  updated_at  :datetime
+#  examiner_id :integer
+#  topic_id    :integer
+#  teacher_id  :integer
 #
 
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  folder: MyString
+  path: MyString
+  attempts: 1
+  flags: 1
 
 two:
-  folder: MyString
+  path: MyString
+  attempts: 1
+  flags: 1
