An examiner now :has_many :graded_responses ...
And a response now :belongs_to an :examiner.
Also added a boolean field to track whether a graded response has been
contested. This field can be used to define the incentive scheme for
examiners. They should aim to have the fewest of their judgements contested
by the student

--- a/webapp/test/fixtures/graded_responses.yml
+++ b/webapp/test/fixtures/graded_responses.yml
@@ -12,6 +12,8 @@
 #  scanned_image :string(255)
 #  created_at    :datetime
 #  updated_at    :datetime
+#  examiner_id   :integer
+#  contested     :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
