--- a/webapp/test/fixtures/examiners.yml
+++ b/webapp/test/fixtures/examiners.yml
@@ -6,6 +6,7 @@
 #  num_contested :integer         default(0)
 #  created_at    :datetime
 #  updated_at    :datetime
+#  secret_key    :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
