--- a/webapp/test/fixtures/examiners.yml
+++ b/webapp/test/fixtures/examiners.yml
@@ -7,6 +7,7 @@
 #  created_at    :datetime
 #  updated_at    :datetime
 #  secret_key    :string(255)
+#  is_admin      :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
