Rationalized Question model further...
Question properties - like whether or not its an MCQ or has multiple parts -
should be captured in the DB. And it is also from the DB that these
values should be picked up when rendering views.

The QR code can thus be simpler. If it can provide the question ID,
then all the rest can be pulled from the DB

--- a/webapp/test/fixtures/questions.yml
+++ b/webapp/test/fixtures/questions.yml
@@ -2,15 +2,18 @@
 #
 # Table name: questions
 #
-#  id          :integer         not null, primary key
-#  path        :string(255)
-#  attempts    :integer         default(0)
-#  flags       :integer         default(0)
-#  created_at  :datetime
-#  updated_at  :datetime
-#  examiner_id :integer
-#  topic_id    :integer
-#  teacher_id  :integer
+#  id            :integer         not null, primary key
+#  path          :string(255)
+#  attempts      :integer         default(0)
+#  created_at    :datetime
+#  updated_at    :datetime
+#  examiner_id   :integer
+#  topic_id      :integer
+#  teacher_id    :integer
+#  mcq           :boolean         default(FALSE)
+#  multi_correct :boolean         default(FALSE)
+#  multi_part    :boolean         default(FALSE)
+#  num_parts     :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
