Added difficulty column to Questions & Syllabi..
The syllabi table maps courses to topics. However, the difficulty
level of topics is also an important characteristic of the course.
In the same course, some topics might get basic coverage while
others get advanced treatment.

The difficulty of a topic in a syllabus is then matched
with the difficulty of questions on that topic in the DB.

There are 3 difficulty levels : basic, intermediate and advanced.
A question can have only one of these levels. In the syllabus,
difficulty could be some OR combination of the above

--- a/webapp/test/fixtures/questions.yml
+++ b/webapp/test/fixtures/questions.yml
@@ -14,6 +14,7 @@
 #  multi_correct :boolean         default(FALSE)
 #  multi_part    :boolean         default(FALSE)
 #  num_parts     :integer
+#  difficulty    :integer         default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
