--- a/webapp/test/fixtures/syllabi.yml
+++ b/webapp/test/fixtures/syllabi.yml
@@ -7,6 +7,7 @@
 #  topic_id   :integer
 #  created_at :datetime
 #  updated_at :datetime
+#  difficulty :integer         default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
