[Major] Renamed Topics models to SpecificTopics...
This has been done in anticipation of introducing another model, called
BroadTopic.

A broad topic could be something like "differential calculus". A specific
topic would be something like "differentiation by parts". A question
will always :belong_to a specific topic. The broad topic would just be for
categorization purposes

--- a/webapp/test/fixtures/syllabi.yml
+++ b/webapp/test/fixtures/syllabi.yml
@@ -2,12 +2,12 @@
 #
 # Table name: syllabi
 #
-#  id         :integer         not null, primary key
-#  course_id  :integer
-#  topic_id   :integer
-#  created_at :datetime
-#  updated_at :datetime
-#  difficulty :integer         default(0)
+#  id                :integer         not null, primary key
+#  course_id         :integer
+#  specific_topic_id :integer
+#  created_at        :datetime
+#  updated_at        :datetime
+#  difficulty        :integer         default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
