--- a/webapp/test/fixtures/questions.yml
+++ b/webapp/test/fixtures/questions.yml
@@ -2,19 +2,19 @@
 #
 # Table name: questions
 #
-#  id            :integer         not null, primary key
-#  path          :string(255)
-#  attempts      :integer         default(0)
-#  created_at    :datetime
-#  updated_at    :datetime
-#  examiner_id   :integer
-#  topic_id      :integer
-#  teacher_id    :integer
-#  mcq           :boolean         default(FALSE)
-#  multi_correct :boolean         default(FALSE)
-#  multi_part    :boolean         default(FALSE)
-#  num_parts     :integer
-#  difficulty    :integer         default(0)
+#  id                :integer         not null, primary key
+#  path              :string(255)
+#  attempts          :integer         default(0)
+#  created_at        :datetime
+#  updated_at        :datetime
+#  examiner_id       :integer
+#  specific_topic_id :integer
+#  teacher_id        :integer
+#  mcq               :boolean         default(FALSE)
+#  multi_correct     :boolean         default(FALSE)
+#  multi_part        :boolean         default(FALSE)
+#  num_parts         :integer
+#  difficulty        :integer         default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
