Added sass-rails to gem-set

--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -21,6 +21,7 @@ gem 'formtastic'
 # Gems used only for assets and not required in production 
 # environment by default (Railscast #282)
 group :assets do 
+  gem 'sass-rails', "~>3.1.0"
   gem 'uglifier'
 end 
 
