Added 2 new boolean fields to GradeDescription...
Between them, the two boolean fields identify the type of question
- mcq, sub-part or stand alone - the grade-description applies to

--- a/webapp/test/fixtures/grade_descriptions.yml
+++ b/webapp/test/fixtures/grade_descriptions.yml
@@ -8,6 +8,8 @@
 #  default_allotment :integer
 #  created_at        :datetime
 #  updated_at        :datetime
+#  mcq               :boolean         default(FALSE)
+#  subpart           :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
