[major] : Renamed GradeDescription to Yardstick
Associated changes made everywhere else - in controller, views etc.

Why the change ? Two reasons :
  1. I was making errors / getting confused between GradeDescription & Grade
     when seeing the code. Therefore, needed names that were very different
  2. I hate typing underscore. The underscore has to be the most useless character
     on the keyboard. It requires 2 key-presses to generate and unlike other
	 characters that also require the same - like $, &, | or @ - it has no real
	 meaning in any programming language. Enuff said...

--- a/webapp/test/fixtures/grades.yml
+++ b/webapp/test/fixtures/grades.yml
@@ -2,12 +2,12 @@
 #
 # Table name: grades
 #
-#  id                   :integer         not null, primary key
-#  allotment            :integer
-#  grade_description_id :integer
-#  teacher_id           :integer
-#  created_at           :datetime
-#  updated_at           :datetime
+#  id           :integer         not null, primary key
+#  allotment    :integer
+#  yardstick_id :integer
+#  teacher_id   :integer
+#  created_at   :datetime
+#  updated_at   :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
