Added an :active boolean to Yardstick...
When true (default), it means that the yardstick is in use. When false,
responses cannot be marked with that yardstick. Nor would the yardstick
be visible in the teacher's rubric

--- a/webapp/test/fixtures/yardsticks.yml
+++ b/webapp/test/fixtures/yardsticks.yml
@@ -10,6 +10,7 @@
 #  updated_at        :datetime
 #  mcq               :boolean         default(FALSE)
 #  subpart           :boolean         default(FALSE)
+#  active            :boolean         default(TRUE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
