--- a/webapp/test/fixtures/accounts.yml
+++ b/webapp/test/fixtures/accounts.yml
@@ -17,6 +17,7 @@
 #  updated_at             :datetime
 #  loggable_id            :integer
 #  loggable_type          :string(255)
+#  active                 :boolean         default(TRUE)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
