--- a/webapp/test/fixtures/accounts.yml
+++ b/webapp/test/fixtures/accounts.yml
@@ -18,6 +18,7 @@
 #  loggable_id            :integer
 #  loggable_type          :string(255)
 #  active                 :boolean         default(TRUE)
+#  username               :string(255)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
