--- a/webapp/test/fixtures/schools.yml
+++ b/webapp/test/fixtures/schools.yml
@@ -11,6 +11,7 @@
 #  phone          :string(255)
 #  created_at     :datetime
 #  updated_at     :datetime
+#  tag            :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
