--- a/test/fixtures/syllabi.yml
+++ b/test/fixtures/syllabi.yml
@@ -2,12 +2,12 @@
 #
 # Table name: syllabi
 #
-#  id                :integer         not null, primary key
-#  course_id         :integer
-#  specific_topic_id :integer
-#  created_at        :datetime
-#  updated_at        :datetime
-#  difficulty        :integer         default(1)
+#  id             :integer         not null, primary key
+#  course_id      :integer
+#  micro_topic_id :integer
+#  created_at     :datetime
+#  updated_at     :datetime
+#  difficulty     :integer         default(1)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
