--- a/test/fixtures/schools.yml
+++ b/test/fixtures/schools.yml
@@ -12,6 +12,7 @@
 #  created_at     :datetime
 #  updated_at     :datetime
 #  tag            :string(255)
+#  board_id       :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
