--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -7,6 +7,7 @@
 #  created_at    :datetime
 #  updated_at    :datetime
 #  num_questions :integer
+#  name          :string(255)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
