Added 2 new attributes to Question - half_page (false) & full_page (true)
The new booleans & 'mcq' are required to determine the position of
the question in the final question paper layout

In all, a question can either be an MCQ alongwith 3 other MCQs on a page, OR
it could require half-a-page alongwith another such question, OR
it could be one that requires a full-page all to itself

That's the plan anyway

--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -15,6 +15,8 @@
 #  multi_part     :boolean         default(FALSE)
 #  num_parts      :integer
 #  difficulty     :integer         default(1)
+#  half_page      :boolean         default(FALSE)
+#  full_page      :boolean         default(TRUE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
