QSelection should maintain page & index information - not GradedResponse ..
A quiz is a unique collection of questions laid out in a certain way. And this
information is captured in QSelection. Hence, there is no need to duplicate
it in GradedResponse

--- a/test/fixtures/q_selections.yml
+++ b/test/fixtures/q_selections.yml
@@ -8,6 +8,7 @@
 #  page        :integer
 #  created_at  :datetime
 #  updated_at  :datetime
+#  index       :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
