--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -17,6 +17,7 @@
 #  difficulty     :integer         default(1)
 #  half_page      :boolean         default(FALSE)
 #  full_page      :boolean         default(TRUE)
+#  marks          :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
