Added a 'marks' column to graded_response ...
marks (graded_response) = grade_id (graded_response) x allotment (grade) x marks (question)

--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -11,6 +11,7 @@
 #  examiner_id    :integer
 #  contested      :boolean         default(FALSE)
 #  q_selection_id :integer
+#  marks          :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
