--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -11,7 +11,7 @@
 #  examiner_id    :integer
 #  contested      :boolean         default(FALSE)
 #  q_selection_id :integer
-#  marks          :integer
+#  marks          :float
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
