Changed StudyGroup -> Sektion ..
Never liked study_group as a name. But couldn't risk using 'section'
as a model name either lest it conflict with something in Rails installation

Hence, as in the past - and the future, I would use an intentional
mis-spelling as model name

--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -2,14 +2,14 @@
 #
 # Table name: students
 #
-#  id             :integer         not null, primary key
-#  guardian_id    :integer
-#  school_id      :integer
-#  first_name     :string(255)
-#  last_name      :string(255)
-#  created_at     :datetime
-#  updated_at     :datetime
-#  study_group_id :integer
+#  id          :integer         not null, primary key
+#  guardian_id :integer
+#  school_id   :integer
+#  first_name  :string(255)
+#  last_name   :string(255)
+#  created_at  :datetime
+#  updated_at  :datetime
+#  sektion_id  :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
