Added klass and subject_id to Quiz ...
Values for these could have been got in other ways. But those ways
wouldn't exactly have been straight-forward. Much easier to just
maintain the values with the Quiz itself

--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -8,6 +8,8 @@
 #  updated_at    :datetime
 #  num_questions :integer
 #  name          :string(255)
+#  klass         :integer
+#  subject_id    :integer
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
