Added a new model 'Testpaper' ...
A testpaper represents an instantiation of a Quiz at a particular time.
And it can have a name - like 'Final Exam - 2011' - to remind the teacher
what it was about

Associations in other models changed accordingly. More tweaks anticipated

--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -12,6 +12,7 @@
 #  contested      :boolean         default(FALSE)
 #  q_selection_id :integer
 #  marks          :float
+#  testpaper_id   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
