--- a/config/gutenberg.yml
+++ b/config/gutenberg.yml
@@ -1,8 +1,12 @@
 
-server : 
-  local: http://localhost:8080/axis2/services/documentMaster
-  remote: http://109.74.201.62:8080/axis2/services/documentMaster
+development :
+  server : http://localhost:8080/axis2/services/documentMaster
+  wsdl : http://localhost:8080/axis2/services/documentMaster?wsdl
 
-wsdl : 
-  local : http://localhost:8080/axis2/services/documentMaster?wsdl
-  remote : http://109.74.201.62:8080/axis2/services/documentMaster?wsdl
+production : 
+  server : http://109.74.201.62:8080/axis2/services/documentMaster
+  wsdl : http://109.74.201.62:8080/axis2/services/documentMaster?wsdl
+
+test : 
+  server : http://localhost:8080/axis2/services/documentMaster
+  wsdl : http://localhost:8080/axis2/services/documentMaster?wsdl
