--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -10,6 +10,7 @@
 #  name          :string(255)
 #  klass         :integer
 #  subject_id    :integer
+#  atm_key       :integer
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
