Brought back column 'annotation' into Yardstick table

--- a/test/fixtures/yardsticks.yml
+++ b/test/fixtures/yardsticks.yml
@@ -8,6 +8,7 @@
 #  created_at        :datetime
 #  updated_at        :datetime
 #  mcq               :boolean         default(FALSE)
+#  annotation        :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
