--- a/test/fixtures/yardsticks.yml
+++ b/test/fixtures/yardsticks.yml
@@ -3,12 +3,13 @@
 # Table name: yardsticks
 #
 #  id                :integer         not null, primary key
-#  description       :string(255)
+#  example           :string(255)
 #  default_allotment :integer
 #  created_at        :datetime
 #  updated_at        :datetime
 #  mcq               :boolean         default(FALSE)
 #  annotation        :string(255)
+#  meaning           :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
