GradedResponse now stores the scanned response's basename ...
.. as opposed to a simple boolean to suggest that a scan is available.

This scheme has 3 advantages:
 1. The basename doubles to serve the same purpose the boolean did - namely,
    to tell whether or not a scan is available
 2. accessing the scan in the locker is as simple as appending the basename
    to pre-determined url-path
 3. Is more future proof as tomorrow one could change how scan files are
    named and yet have no impact on how older scans - with older names -
    are accessed ( assuming of course, the location does not change )

--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -12,7 +12,7 @@
 #  q_selection_id :integer
 #  marks          :float
 #  testpaper_id   :integer
-#  scan_available :boolean         default(FALSE)
+#  scan           :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
