Renamed MicroTopic to just Topic
So, now we have Verticals with many Topics

--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -2,22 +2,22 @@
 #
 # Table name: questions
 #
-#  id             :integer         not null, primary key
-#  uid            :string(255)
-#  attempts       :integer         default(0)
-#  created_at     :datetime
-#  updated_at     :datetime
-#  examiner_id    :integer
-#  micro_topic_id :integer
-#  teacher_id     :integer
-#  mcq            :boolean         default(FALSE)
-#  multi_correct  :boolean         default(FALSE)
-#  multi_part     :boolean         default(FALSE)
-#  num_parts      :integer
-#  difficulty     :integer         default(1)
-#  half_page      :boolean         default(FALSE)
-#  full_page      :boolean         default(TRUE)
-#  marks          :integer
+#  id            :integer         not null, primary key
+#  uid           :string(255)
+#  attempts      :integer         default(0)
+#  created_at    :datetime
+#  updated_at    :datetime
+#  examiner_id   :integer
+#  topic_id      :integer
+#  teacher_id    :integer
+#  mcq           :boolean         default(FALSE)
+#  multi_correct :boolean         default(FALSE)
+#  multi_part    :boolean         default(FALSE)
+#  num_parts     :integer
+#  difficulty    :integer         default(1)
+#  half_page     :boolean         default(FALSE)
+#  full_page     :boolean         default(TRUE)
+#  marks         :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
