For each student, maintaining information about the marks earned and ..
.. grading status of each testpaper in the course pack

--- a/test/fixtures/course_packs.yml
+++ b/test/fixtures/course_packs.yml
@@ -7,6 +7,8 @@
 #  testpaper_id :integer
 #  created_at   :datetime
 #  updated_at   :datetime
+#  marks        :integer
+#  graded       :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
