Added colour code to Yardstick ..
The colour code can be = 1,2 or 3 representing pink, orange and green states.
Applies also to yardsticks pertaining to mcqs

--- a/test/fixtures/yardsticks.yml
+++ b/test/fixtures/yardsticks.yml
@@ -10,6 +10,7 @@
 #  mcq               :boolean         default(FALSE)
 #  annotation        :string(255)
 #  meaning           :string(255)
+#  colour            :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
