Store offset info. for each subpart ..
relative_index: which subpart of the question is it ?
relative_pg: on which page - relative to the page on which the parent question is set -
             is the sub-part set. Always an integer - starting from 0

--- a/test/fixtures/subparts.yml
+++ b/test/fixtures/subparts.yml
@@ -2,13 +2,15 @@
 #
 # Table name: subparts
 #
-#  id            :integer         not null, primary key
-#  question_id   :integer
-#  mcq           :boolean         default(FALSE)
-#  half_page     :boolean         default(FALSE)
-#  full_page     :boolean         default(TRUE)
-#  marks         :integer
-#  multi_correct :boolean         default(FALSE)
+#  id             :integer         not null, primary key
+#  question_id    :integer
+#  mcq            :boolean         default(FALSE)
+#  half_page      :boolean         default(FALSE)
+#  full_page      :boolean         default(TRUE)
+#  marks          :integer
+#  multi_correct  :boolean         default(FALSE)
+#  relative_index :integer
+#  relative_pg    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
