--- a/test/fixtures/subparts.yml
+++ b/test/fixtures/subparts.yml
@@ -2,14 +2,14 @@
 #
 # Table name: subparts
 #
-#  id          :integer         not null, primary key
-#  question_id :integer
-#  mcq         :boolean         default(FALSE)
-#  half_page   :boolean         default(FALSE)
-#  full_page   :boolean         default(TRUE)
-#  marks       :integer
-#  index       :integer
-#  offset      :integer
+#  id            :integer         not null, primary key
+#  question_id   :integer
+#  mcq           :boolean         default(FALSE)
+#  half_page     :boolean         default(FALSE)
+#  full_page     :boolean         default(TRUE)
+#  marks         :integer
+#  index         :integer
+#  relative_page :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
