Tracking the # of pages needed by an individual question's answer-key
This is a number that cannot be guessed. The tagQuestion request therefore
returns the # as part of its manifest

--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -2,17 +2,18 @@
 #
 # Table name: questions
 #
-#  id          :integer         not null, primary key
-#  uid         :string(255)
-#  attempts    :integer         default(0)
-#  created_at  :datetime
-#  updated_at  :datetime
-#  examiner_id :integer
-#  topic_id    :integer
-#  teacher_id  :integer
-#  difficulty  :integer         default(1)
-#  marks       :integer
-#  length      :float
+#  id              :integer         not null, primary key
+#  uid             :string(255)
+#  attempts        :integer         default(0)
+#  created_at      :datetime
+#  updated_at      :datetime
+#  examiner_id     :integer
+#  topic_id        :integer
+#  teacher_id      :integer
+#  difficulty      :integer         default(1)
+#  marks           :integer
+#  length          :float
+#  answer_key_span :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
