Support for tracking the type of calculation aids required added
Question now has a new field - calculation_aid - with the following
possible values:
  1. 0 => no aid
  2. 2 => scientific calculator w/o graphing
  3. 4 => graphing calculator

Other options could include log tables and slide-rule

--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -14,6 +14,7 @@
 #  marks           :integer
 #  length          :float
 #  answer_key_span :integer
+#  calculation_aid :integer         default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
