--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -8,6 +8,7 @@
 #  instructional :boolean         default(FALSE)
 #  created_at    :datetime
 #  updated_at    :datetime
+#  title         :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
