--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -19,6 +19,7 @@
 #  loggable_type          :string(255)
 #  active                 :boolean         default(TRUE)
 #  username               :string(255)
+#  trial                  :boolean         default(TRUE)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
