--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -15,6 +15,7 @@
 #  length          :float
 #  answer_key_span :integer
 #  calculation_aid :integer         default(0)
+#  restricted      :boolean         default(TRUE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
