--- a/test/fixtures/subparts.yml
+++ b/test/fixtures/subparts.yml
@@ -10,6 +10,7 @@
 #  marks         :integer
 #  index         :integer
 #  relative_page :integer
+#  few_lines     :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
