What grade/klass a student belongs to is now a direct property of the student
.. and not derieved from the sektion he/she belongs to - of which there can
now be more than one

A student should be able to belong to any sektion in his/her school
corresponding to his/her grade level

--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -9,6 +9,7 @@
 #  last_name   :string(255)
 #  created_at  :datetime
 #  updated_at  :datetime
+#  klass       :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
