First commit towards implementing an expanded definition of specialization ...
We will henceforth use a teacher's specialization to match her with sections
of students. This is needed because eventually teachers would be able to create
their own sections/groupings

--- a/test/fixtures/specializations.yml
+++ b/test/fixtures/specializations.yml
@@ -7,6 +7,7 @@
 #  subject_id :integer
 #  created_at :datetime
 #  updated_at :datetime
+#  klass      :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
