--- a/config/gutenberg.yml
+++ b/config/gutenberg.yml
@@ -4,6 +4,7 @@ operations : &tasks
   assign_quiz : http://gutenberg/blocs/assignQuiz
   receive_scans : http://gutenberg/blocs/receiveScans
   annotate_scan : http://gutenberg/blocs/annotateScan
+  generate_suggestion_form : http://gutenberg/blocs/generateSuggestionForm
 
 development : &non_production_settings
   axis2 : http://localhost:8080/axis2/services/documentMaster
