--- a/test/fixtures/testpapers.yml
+++ b/test/fixtures/testpapers.yml
@@ -2,11 +2,12 @@
 #
 # Table name: testpapers
 #
-#  id         :integer         not null, primary key
-#  quiz_id    :integer
-#  name       :string(255)
-#  created_at :datetime
-#  updated_at :datetime
+#  id          :integer         not null, primary key
+#  quiz_id     :integer
+#  name        :string(255)
+#  created_at  :datetime
+#  updated_at  :datetime
+#  publishable :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
