DB changes in Question model to enable & track 3rd party audits of questions

--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -16,6 +16,8 @@
 #  answer_key_span :integer
 #  calculation_aid :integer         default(0)
 #  restricted      :boolean         default(TRUE)
+#  audited         :boolean         default(FALSE)
+#  audited_by      :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
