--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -14,6 +14,7 @@
 #  testpaper_id   :integer
 #  scan           :string(255)
 #  subpart_id     :integer
+#  page           :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
