Added a boolean - exclusive - to Testpaper model ..
If a testpapers is exclusive (default), then only the teacher who made
it can see results for it in her console

However, if it is public/non-exclusive, then her colleagues - as defined
by the method colleagues - can also view results for that testpaper

This is for times when one teacher develops the quiz and the quiz is
administered across sektions

--- a/test/fixtures/testpapers.yml
+++ b/test/fixtures/testpapers.yml
@@ -8,6 +8,7 @@
 #  created_at  :datetime
 #  updated_at  :datetime
 #  publishable :boolean         default(FALSE)
+#  exclusive   :boolean         default(TRUE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
