First steps in overhauling the way rubrics are defined/edited
Henceforth, yardsticks will represent individual traits of a response - like
meaningful insight, sound formulation, exact calculations etc.

A collection of yardsticks would then define a 'calibration'.
Each calibration would have its own default allotment (defined by us) -
which a teacher can override, if she so chooses

The aim with these changes is to:
  1. build a flexible rubric that can - if required - be edited & improved easily
  2. highlight to the students why they got the grade that they got

--- a/test/fixtures/yardsticks.yml
+++ b/test/fixtures/yardsticks.yml
@@ -2,15 +2,12 @@
 #
 # Table name: yardsticks
 #
-#  id                :integer         not null, primary key
-#  example           :string(255)
-#  default_allotment :integer
-#  created_at        :datetime
-#  updated_at        :datetime
-#  mcq               :boolean         default(FALSE)
-#  annotation        :string(255)
-#  meaning           :string(255)
-#  colour            :integer
+#  id          :integer         not null, primary key
+#  mcq         :boolean         default(FALSE)
+#  meaning     :string(255)
+#  insight     :boolean         default(FALSE)
+#  formulation :boolean         default(FALSE)
+#  calculation :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
