Added a numerical measure of 'ideal-ness' - called weight - to yardsticks
The higher the 'weight', the more 'ideal' a yardstick is - in the context of
what it represents

For example, a yardstick for insights with weight = 1 => no insights
but a yardstick with weight = 3/4/5 => insightful response

--- a/test/fixtures/yardsticks.yml
+++ b/test/fixtures/yardsticks.yml
@@ -8,6 +8,7 @@
 #  insight     :boolean         default(FALSE)
 #  formulation :boolean         default(FALSE)
 #  calculation :boolean         default(FALSE)
+#  weight      :integer         default(1)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
