Grade now belongs_to :calibration
Transition plan on Heroku
--------------------------
 1. Fill the calibration_id columns for all grades. By this time there would
    be calibration objects in the DB. Requires manual verification

Only AFTER the transition should you remove the yardstick_id column from
grades. Write and run that migration file later. Put site in maintanence mode too

--- a/test/fixtures/grades.yml
+++ b/test/fixtures/grades.yml
@@ -2,12 +2,13 @@
 #
 # Table name: grades
 #
-#  id           :integer         not null, primary key
-#  allotment    :integer
-#  yardstick_id :integer
-#  teacher_id   :integer
-#  created_at   :datetime
-#  updated_at   :datetime
+#  id             :integer         not null, primary key
+#  allotment      :integer
+#  yardstick_id   :integer
+#  teacher_id     :integer
+#  created_at     :datetime
+#  updated_at     :datetime
+#  calibration_id :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
