Added a new column - bottomline - to yardsticks ..
Bottomline is nothing but a short 1-3 word sentence summarizing
whether the yardstick signifies achievement on a certain front or not

The reason the old 'meaning' column was split into two - meaning & bottomline -
is so that we can stylize the bottomline separately when showing calibrations.

Yes, vanity requires effort

--- a/test/fixtures/yardsticks.yml
+++ b/test/fixtures/yardsticks.yml
@@ -9,6 +9,7 @@
 #  formulation :boolean         default(FALSE)
 #  calculation :boolean         default(FALSE)
 #  weight      :integer         default(1)
+#  bottomline  :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
