--- a/test/fixtures/calibrations.yml
+++ b/test/fixtures/calibrations.yml
@@ -7,7 +7,7 @@
 #  formulation_id :integer
 #  calculation_id :integer
 #  mcq_id         :integer
-#  allotment      :integer
+#  allotment      :float
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
