Added span information to a Quiz too ..
The span of a quiz/answer-key is the number of pages its laid out over.
It can be different from the resulting testpaper span if - for example -
the solution to a questions takes more space than what we leave for it in
the testpaper or if it takes less space than in what we leave for it in
the testpaper

--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -12,6 +12,7 @@
 #  subject_id    :integer
 #  atm_key       :string(255)
 #  total         :integer
+#  span          :integer
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
