--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -15,6 +15,7 @@
 #  scan           :string(255)
 #  subpart_id     :integer
 #  page           :integer
+#  marks_teacher  :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
