--- a/test/fixtures/schools.yml
+++ b/test/fixtures/schools.yml
@@ -13,6 +13,7 @@
 #  updated_at     :datetime
 #  tag            :string(255)
 #  board_id       :integer
+#  xls            :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
